airflow-deployment.yaml
apiVersion: airflow.apache.org/v1beta1
kind: Deployment
metadata:
  name: airflow-deployment
  namespace: airflow


spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: airflow
          image: airflow-dbt:local
          imagePullPolicy: Never
